fix: spacing and row border as per design guide

--- a/react/dynamic-nested-rows/src/Example/example.scss
+++ b/react/dynamic-nested-rows/src/Example/example.scss
@@ -21,7 +21,7 @@
 
 .cds--data-table th:first-of-type,
 .cds--data-table td:first-of-type {
-  padding-inline-start: 0.5rem;
+  padding-inline-start: 0;
 }
 
 .tanstack-example {
@@ -61,7 +61,7 @@
 
 .row-content {
   flex: 1 0 auto;
-  padding-left: 1rem;
+  padding-left: $spacing-03;
   height: 3rem;
   align-content: center;
 }
@@ -70,7 +70,7 @@
   content: '';
   position: absolute;
   bottom: -1px;
-  left: -0.5rem;
+  left: 0;
   height: 1px;
   background-color: var(--cds-layer, #f4f4f4);
 }
